--- a/prototype/app/css/style.css
+++ b/prototype/app/css/style.css
@@ -31,6 +31,53 @@
     font-weight: bold;
 }
 
+.btn-primary {
+    background: #d9121f;
+    border-radius: 19px;
+    border: none;
+    color: #fff;
+    font-size: 11px;
+    padding: 11px 38px;
+    font-weight: bold;
+}
+
 .banner p {}
 
-.banner .btn {}
+.category {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-size: cover;
+}
+
+.category-1 {
+    background-image: url(../images/category-1.jpg);
+}
+
+.category-2 {
+    background-image: url(../images/category-2.jpg);
+}
+
+.category-3 {
+    background-image: url(../images/category-3.jpg);
+}
+
+.category .category-text {
+    text-align: center;
+    padding-left: 40px;
+    width: 200px;
+}
+
+.category h3 {
+    font-size: 23px;
+    color: #000;
+    padding-bottom: 10px;
+}
+
+.btn-secondary {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    border-radius: 15px;
+    padding: 6px 17px;
+    font-size: 11px;
+}
