--- a/prototype/app/css/style.css
+++ b/prototype/app/css/style.css
@@ -111,4 +111,61 @@
     letter-spacing: 1.2px;
 }
 
+.btn-cart i {
+    font-size: 20px;
+}
+
+.product {
+    position: relative;
+}
+
+.pro-highlight {
+    position: absolute;
+    top: 0;
+    /* bottom */
+    left: 0;
+    /* right */
+}
+
+.pro-varient,
+.pro-discount {
+    background-color: #d9121f;
+    color: #fff;
+    font-size: 12px;
+    padding: 5px 10px;
+    font-weight: bold;
+}
+
+.pro-discount {
+    background-color: blue;
+}
+
+.pro-actions {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    display: none;
+}
+
+.product:hover .pro-actions {
+    display: block;
+}
+
+.pro-actions .btn {
+    background: #fff;
+    color: #000;
+    border-radius: 50%;
+    padding: 7px;
+    width: 36px;
+    height: 36px;
+    margin-bottom: 6px;
+    font-size: 18px;
+}
+
+.pro-actions .btn:hover {
+    background-color: crimson;
+    color: #fff;
+}
+
 .section-title {}
