--- a/prototype/app/css/style.css
+++ b/prototype/app/css/style.css
@@ -7,6 +7,33 @@
     width: 190px;
 }
 
+.main-nav {}
+
+.main-nav .nav-item {}
+
+.main-nav .nav-link {
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+    padding: 14px 37px;
+}
+
+.main-nav .nav-link:hover {
+    color: #d9121f;
+}
+
+.main-nav .nav-link.active {}
+
+.search .form-control {
+    margin-top: 14px;
+    border-radius: 70px;
+    background: #ededed;
+    border: none;
+    min-width: 340px;
+}
+
+.search .btn {}
+
 .banner {
     background-image: url('../images/banner.jpg');
     background-size: cover;
